add models folder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "matplotlib>=2.2.5",
     "numpy>=1.12.1",
     "pandas>=2.2.3",
+    "pip>=25.1.1",
     "python-dotenv>=1.1.0",
     "scikit-learn>=0.21.0",
     "torch>=1.2.0",
